forecast detailed card header update

--- a/www/templates/forecast.html
+++ b/www/templates/forecast.html
@@ -50,7 +50,7 @@
         </label>
         <slick infinate="false" settings="slickSettings" data="selectedCourse.detailedWeather" ng-if="weatherLoaded">
           <div class="item card" ng-repeat="detail in selectedCourse.detailedWeather">
-            <div class="item item-divider">
+            <div class="item item-divider" style="background-color:#fff!important; text-align:center!important;">
               {{detail.weekday}} {{detail.date}}
             </div>
             <!-- <div class="item item-avatar">
