--- a/www/css/style.css
+++ b/www/css/style.css
@@ -34,6 +34,13 @@
 .scroll {
   height: 100%;
 }*/
+.bar-new {
+    border-color: #fff;
+    background: #fff;
+    color: #393939; }
+    .bar-new.title {
+      color: #393939; }
+
 .toggle-text > .track {
 
   width: auto;
