--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,11 +1,11 @@
 <ion-side-menus enable-menu-with-back-views="true">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-new">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
       <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+        <button class="button button-icon button-clear ion-navicon" style="color:#393939!important;" menu-toggle="left">
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
@@ -13,10 +13,22 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
-<!--     <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>-->
+<!--
+    <ion-header-bar class="bar-new">
+     <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
     </ion-header-bar>
+-->
     <ion-content>
+        <br/>
+         <div class="row">
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="exclaim" style="font-weight: bold; color: #fff" menu-toggle="left">
+                    <img ng-src="/img/icon.png" width="100"/><br /><br />
+                </div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
       <ion-list>
         <ion-item menu-close href="#/app/search-courses">
         Search
