--- a/www/css/style.css
+++ b/www/css/style.css
@@ -39,7 +39,8 @@
     background: #fff;
     color: #393939; }
     .bar-new.title {
-      color: #393939; }
+      color: #393939; 
+}
 
 .toggle-text > .track {
 
