--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,6 +1,6 @@
-<ion-side-menus enable-menu-with-back-views="true">
+<ion-side-menus enable-menu-with-back-views="true" style="color:#393939!important;">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-new">
+    <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -33,9 +33,11 @@
         <ion-item menu-close href="#/app/search-courses">
         Search
         </ion-item>
+<!--
         <ion-item menu-close href="#/app/my-courses">
         My Courses
         </ion-item>
+-->
         <ion-item menu-close href="#/app/settings">
         Settings
         </ion-item>
