--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,72 @@
 /* Empty. Add your own CSS if you like */
+/*.map-container
+{
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
 
+  .map
+  {
+    height: 100%;
+    width: 100%;
+  }
+}*/
+
+
+.map-content .scroll {
+  height: 100%;
+}
+
+.geolocation-row {
+  /*height: -webkit-calc((100% - 85%));
+  height: calc((100% - 85%));*/
+  height: 100%;
+}
+.geolocation-row .geolocation-button {
+  margin: 0px;
+}
+
+.map-row {
+  height: 100%;
+  margin: 0px !important; }
+  .map-row .map-col {
+    position: relative; }
+  .map-row .search-container {
+    position: absolute;
+    left: 0px;
+    right: 0px; }
+    .map-row .search-container .search-input-outer {
+      margin: 10px;
+      margin-bottom: 0px; }
+    .map-row .search-container .search-results {
+      padding: 10px;
+      padding-top: 0px; }
+  .map-row .map-container {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px; }
+    .map-row .map-container .map {
+      height: 100%;
+      width: 100%; }
+
+.custom-marker {
+  font-size: 1.5em;
+  padding: 10px;
+  background: #F1F1F1;
+  color: #333;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  border: #7F7F7F solid 1px; }
+  .custom-marker .marker-title {
+    margin: 0px; }
+
+.place-logo {
+  text-align: center; }
 /*.toggle-wrapper {
   display: inline-block;
   width: 100%;
@@ -39,7 +106,7 @@
     background: #fff;
     color: #393939; }
     .bar-new.title {
-      color: #393939; 
+      color: #393939;
 }
 
 .toggle-text > .track {
