disabled zoom control on map

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -22,7 +22,7 @@
           </div>
         </div>
         <div class="map-container" data-tap-disabled="true">
-          <ng-map class="map" zoom="14" center="[{{latitude}}, {{longitude}}]" zoom-control="true" scale-control="false" map-type-control="false" street-view-control="false" map-initialized="init(map)">
+          <ng-map class="map" zoom="14" center="[{{latitude}}, {{longitude}}]" zoom-control="false" scale-control="false" map-type-control="false" street-view-control="false" map-initialized="init(map)">
             <info-window id="info">
               <div ng-non-bindable="">
                 <table>
